[gd_scene load_steps=4 format=2]

[ext_resource path="res://profile/editor/face_texture_editor.gd" type="Script" id=1]
[ext_resource path="res://profile/editor/face_selection.tscn" type="PackedScene" id=2]

[sub_resource type="ImageTexture" id=1]

[node name="FaceTextureEditor" type="WindowDialog"]
margin_left = 19.0
margin_top = 45.0
margin_right = 728.0
margin_bottom = 568.0
popup_exclusive = true
window_title = "Edit Face Texture"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
custom_constants/separation = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 699.0
margin_bottom = 483.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ScrollContainer"]
margin_right = 699.0
margin_bottom = 483.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="FaceSelection" parent="VBoxContainer/ScrollContainer/TextureRect" instance=ExtResource( 2 )]

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 493.0
margin_right = 699.0
margin_bottom = 513.0
custom_constants/separation = 10

[node name="FromCamera" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 549.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "From Camera..."

[node name="FromFile" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 559.0
margin_right = 643.0
margin_bottom = 20.0
text = "From File..."

[node name="Done" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 653.0
margin_right = 699.0
margin_bottom = 20.0
text = "Done"

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 664.0
margin_bottom = 472.0
popup_exclusive = true
window_title = "Open Face Texture"
resizable = true
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.png,*.jpg,*.jpeg,*.bmp ; Image Files" )
current_dir = "/Users/Yakov/Documents/xtremettt"
current_path = "/Users/Yakov/Documents/xtremettt/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileLoadingError" type="AcceptDialog" parent="."]
margin_right = 221.0
margin_bottom = 58.0
popup_exclusive = true
window_title = "File Loading Error"
dialog_text = "Can't load selected face texture."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="selection_changed" from="VBoxContainer/ScrollContainer/TextureRect/FaceSelection" to="." method="_on_FaceSelection_selection_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/FromFile" to="." method="_on_FromFile_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Done" to="." method="_on_Done_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
